crates/normalize/tests/snapshots/cli_snapshots__help_facts.snap
---
source: crates/normalize/tests/cli_snapshots.rs
assertion_line: 47
expression: "snapshot_help(&[\"facts\"])"
---

