crates/normalize/tests/snapshots/cli_snapshots__help_facts_check.snap
---
source: crates/normalize/tests/cli_snapshots.rs
assertion_line: 184
expression: "snapshot_help(&[\"facts\", \"check\"])"
---

