crates/normalize/tests/snapshots/cli_snapshots__help_facts_files.snap
---
source: crates/normalize/tests/cli_snapshots.rs
assertion_line: 169
expression: "snapshot_help(&[\"facts\", \"files\"])"
---

