crates/normalize/tests/snapshots/cli_snapshots__help_facts_packages.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"structure\", \"packages\"])"
---
Index external packages (stdlib, site-packages) into global cache

Usage: normalize structure packages [OPTIONS]

Options:
      --jsonl                      Output one JSON object per line (for arrays)
      --only <only>                Ecosystems to index (comma-separated)
      --pretty                     Human-friendly output with colors and formatting
      --clear                      Clear existing index before re-indexing
      --compact                    Compact output without colors (overrides TTY detection)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
  -r, --root <root>                Root directory (defaults to current directory)
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Examples:
normalize structure packages                  # index all detected ecosystems
normalize structure packages --only rust      # index only Rust stdlib
normalize structure packages --clear          # clear cache and re-index
