crates/normalize/tests/snapshots/cli_snapshots__help_facts_rebuild.snap
---
source: crates/normalize/tests/cli_snapshots.rs
assertion_line: 159
expression: "snapshot_help(&[\"facts\", \"rebuild\"])"
---

