crates/normalize/tests/snapshots/cli_snapshots__help_facts_rules.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"structure\", \"rules\"])"
---

