crates/normalize/tests/snapshots/cli_snapshots__help_facts_stats.snap
---
source: crates/normalize/tests/cli_snapshots.rs
assertion_line: 164
expression: "snapshot_help(&[\"facts\", \"stats\"])"
---

