crates/normalize/tests/snapshots/cli_snapshots__help_find_references.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"find-references\"])"
---

