crates/normalize/tests/snapshots/cli_snapshots__help_generate_cli_snapshot.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"generate\", \"cli-snapshot\"])"
---
Generate CLI snapshot tests for a binary

Usage: normalize generate cli-snapshot [OPTIONS] [binary]

Arguments:
  [binary]  Path to the CLI binary

Options:
      --jsonl                      Output one JSON object per line (for arrays)
  -o, --output <output>            Output file for the test (stdout if not specified)
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --json                       Output machine-readable JSON
      --name <name>                Binary name to use in test (defaults to file stem)
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Examples:
normalize generate cli-snapshot ./target/debug/myapp              # generate snapshot tests
normalize generate cli-snapshot ./target/debug/myapp -o tests/cli.rs  # write to file
