crates/normalize/tests/snapshots/cli_snapshots__help_generate_client.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"generate\", \"client\"])"
---
Generate API client from OpenAPI spec

Usage: normalize generate client [OPTIONS] [spec]

Arguments:
  [spec]  OpenAPI spec JSON file

Options:
      --jsonl                      Output one JSON object per line (for arrays)
  -l, --lang <lang>                Target language: typescript, python, rust
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --json                       Output machine-readable JSON
  -o, --output <output>            Output file (stdout if not specified)
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Examples:
normalize generate client api.json -l typescript          # generate TypeScript client
normalize generate client api.json -l python -o client.py # generate Python client to file
