crates/normalize/tests/snapshots/cli_snapshots__help_generate_typegen.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"generate\", \"typegen\"])"
---

